Closed Bug 159461 Opened 23 years ago Closed 23 years ago

Chimera doesn't remember previous download dialog position

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: winnie, Assigned: sfraser_bugs)

Details

07-25 build on OS 10.1.5. 1. Download a file. 2. Download dialog box appears. 3. Move download dialog box to a different position. 4. File download completes. 5. Download another file. Expected behavior: Download dialog box appears in the same position as before, i.e. the position that it was moved to in step 3. Actual behavior: Download dialog box appears in the same "default" position as in step 2.
->sfraser
Assignee: saari → sfraser
Happens in Mozilla also.
The code is totally different in Mozilla; this is a chimera bug.
Status: NEW → ASSIGNED
Fixed. The download window will remember its position now.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified with 07-29 build on OS 10.1.5.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.