Fix bug 159461: make the progress window remember its position, and (bug 159460) have it appear in the Windows menu, with a useful name.